--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-/* #output {
-    white-space: pre-line;
-} */
-
 .App {
     height: 100vh;
     display: flex;
@@ -11,4 +7,19 @@
 
 #wrapper {
     height: 75%;
+    display: flex;
+    align-items: center;
+}
+
+#output {
+    overflow-x: hidden;
+    border: 1px solid #CCC;
+    height: 60vh;
+}
+
+#content {
+    margin: 10px;
+}
+#shifting-controls {
+    height: 25%;
 }
