--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+body::-webkit-scrollbar {
+  width: 1em;
 }
-
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
-
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
